--- a/config.yaml
+++ b/config.yaml
@@ -4,3 +4,5 @@ api:
   advertiseAddress: 10.0.254.1
 networking:
   podSubnet: 10.244.0.0/16
+controllerManagerExtraArgs:
+  horizontal-pod-autoscaler-use-rest-clients: "false"
