--- a/blinkt-k8s-controller-pods.yaml
+++ b/blinkt-k8s-controller-pods.yaml
@@ -28,6 +28,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
+        - name: GLOG_logtostderr
+          value: "1"
         volumeMounts:
         - mountPath: /sys
           name: sys-tree
