--- a/traefik.yaml
+++ b/traefik.yaml
@@ -35,8 +35,8 @@ subjects:
   name: traefik-ingress-controller
   namespace: kube-system
 ---
-kind: ServiceAccount
 apiVersion: v1
+kind: ServiceAccount
 metadata:
   name: traefik-ingress-controller
   namespace: kube-system
@@ -47,62 +47,44 @@ metadata:
   name: traefik-ingress-controller
   namespace: kube-system
   labels:
-    k8s-app: traefik-ingress-controller
+    k8s-app: traefik-ingress-lb
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      k8s-app: traefik-ingress-lb
   template:
     metadata:
       labels:
-        k8s-app: traefik-ingress-controller
-        name: traefik-ingress-controller
+        k8s-app: traefik-ingress-lb
+        name: traefik-ingress-lb
     spec:
       serviceAccountName: traefik-ingress-controller
       terminationGracePeriodSeconds: 60
-      hostNetwork: true
-      tolerations:
-      - key: "node-role.kubernetes.io/master"
-        operator: "Exists"
-        effect: "NoSchedule"
-      nodeSelector:
-        loadBalancer: "true"
       containers:
-      - image: ngpitt/traefik:v1.4.5
-        name: traefik-ingress-controller
+      - image: traefik
+        name: traefik-ingress-lb
         ports:
         - name: http
           containerPort: 80
-          hostPort: 80
         - name: admin
           containerPort: 8080
-        securityContext:
-          privileged: true
         args:
-        - --web
+        - --api
         - --kubernetes
+        - --logLevel=INFO
 ---
 kind: Service
 apiVersion: v1
 metadata:
-  name: traefik-web-ui
+  name: traefik-ingress-service
   namespace: kube-system
 spec:
   selector:
-    k8s-app: traefik-ingress-controller
+    k8s-app: traefik-ingress-lb
   ports:
-  - port: 80
-    targetPort: 8080
----
-kind: Ingress
-apiVersion: extensions/v1beta1
-metadata:
-  name: traefik-web-ui
-  namespace: kube-system
-spec:
-  rules:
-  - host: traefik.raspi
-    http:
-      paths:
-      - path: /
-        backend:
-          serviceName: traefik-web-ui
-          servicePort: 80
+  - name: http
+    port: 80
+  - name: admin
+    port: 8080
+  type: NodePort
